# ai-agent

pr-gatekeeper-agent/: .env.example  README.md  pyproject.toml
pr-gatekeeper-agent/config/: policy.yaml
pr-gatekeeper-agent/src/app/: cli.py
pr-gatekeeper-agent/src/graph/: build_graph.py  state.py
pr-gatekeeper-agent/src/graph/nodes/: analyze_findings.py  collect_context.py  ingest_pr.py  publish_results.py  render_report.py  run_tools.py
pr-gatekeeper-agent/src/policies/: policy_engine.py  schemas.py
pr-gatekeeper-agent/src/storage/: db.py  models.py
pr-gatekeeper-agent/src/tools/: git.py  linters.py  ripgrep.py  runner.py  tests.py
pr-gatekeeper-agent/tests/: test_graph_smoke.py  test_policy_engine.py  test_tool_runner.py
