[project]
name = "pr-gatekeeper-agent"
version = "0.1.0"
description = "PR Gatekeeper Agent V1"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.0.36",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "ruff>=0.4",
  "pytest>=7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
